# GEOPHIRES-X

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  How-to-extend-GEOPHIRES-X.md  INSTALL.rst  LICENSE  MANIFEST.in  PTCandITCinGEOPHIRES.docx  PTCandITCinGEOPHIRES.md  PTCandITCinGEOPHIRES2.md  README.rst  coverage.xml  geothermal_data.csv  pyproject.toml  pytest.ini  requirements.txt  results.csv  setup.py  tests.7z  tox.ini
.github/: pull_request_template.md
Engage-Testing/: chp-testing.ipynb  engage_analysis_v1.py  example_outputs.json  requirements.txt  results.csv  summary_of_results.json  test_geo.py  test_geophires_plots.ipynb
References/: 01d-jedi-geothermal-model-rel-gt12-23-16.xlsm  Drill cost correlation converting to per foot cost.xlsx  JEDI.md  README.md  fervo_energy_white_paper.md  fervo_references.md  references.md
ci/: bootstrap.py  requirements.txt
doc/: geophires_x.html
docs/: Fervo_Project_Cape-4.md  GEOPHIRES-Examples.md  How-to-extend-GEOPHIRES-X.md  Monte-Carlo-User-Guide.md  SAM-EM_Multiple-Construction-Years.md  SAM-Economic-Models.md  Theoretical-Basis-for-GEOPHIRES.md  conf.py  index.rst  installation.rst  overview.rst  readme.rst  requirements.txt  usage.rst  watch_docs.py
geophires/: pyvenv.cfg
tests/: .gitignore  HIP_RA_Unit_tests.py  __init__.py  ags_input_depth_kilometers.txt  base_test_case.py  cylindrical_reservoir_input_depth_meters.txt  drilling-adjustment-factor.txt  error-code-5500.txt  example1_addons.csv  geophires-result_example-1.out  geophires-result_example-2.out  (+20 more)
(+374 files in other folders)
